Local database configured

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+#Jasypt password encryption
+jasypt.encryptor.iv-generator-classname=org.jasypt.iv.NoIvGenerator
+jasypt.encryptor.algorithm=PBEWithMD5AndDES
+
 #Database
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/kata-spring-db
-spring.datasource.username=user
-spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://${host}:5432/${database}
+spring.datasource.username=kataspringdbapp
+spring.datasource.password=ENC(dR4+92W7o+kmyF9Up8i3Lw==)
