--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('io.springfox:springfox-swagger2:2.9.2')
     compile('io.springfox:springfox-swagger-ui:2.9.2')
+    compile('com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3')
 
     runtime('com.h2database:h2:1.4.200')
 }
