--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,6 +4,6 @@ jasypt.encryptor.algorithm=PBEWithMD5AndDES
 
 #Database
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.url=jdbc:postgresql://${host}:5432/${database}
+spring.datasource.url=jdbc:postgresql://localhost:5432/kataspringdblocal
 spring.datasource.username=kataspringdbapp
 spring.datasource.password=ENC(dR4+92W7o+kmyF9Up8i3Lw==)
