--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,6 +3,8 @@ jasypt.encryptor.iv-generator-classname=org.jasypt.iv.NoIvGenerator
 jasypt.encryptor.algorithm=PBEWithMD5AndDES
 
 #Database
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/kataspringdblocal
 spring.datasource.username=kataspringdbapp
